# Datapao_IMDB_test

./: .gitignore  Dockerfile  pyproject.toml  run_docker.sh
Datapao_IMDB/: imdb_scrape.py  oscar_rewarder.py  penalizer.py
test/: test_oscar_calculator.py  test_review_penalizer.py  test_scraping.py
