[tool.poetry]
name = "datapao_imdb"
version = "0.1.0"
description = ""
authors = ["bencebogdndy <bogdandy.bence@lexunit.hu>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
selenium = "^4.8.3"
pandas = "^1.5.3"
aiohttp = "^3.8.4"
asynctest = "^0.13.0"
nest-asyncio = "^1.5.6"



[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

